[gd_scene load_steps=21 format=3 uid="uid://djkq04k1wo633"]

[ext_resource type="Script" path="res://Scripts/Microgames/Fridge/FridgeMicrogame.gd" id="1_j84xc"]
[ext_resource type="Texture2D" uid="uid://b5s6ytudng33f" path="res://Assets/Microgames/fridge.png" id="1_u20vr"]
[ext_resource type="Texture2D" uid="uid://nriry6oa8w2g" path="res://Assets/Microgames/fridgeHand.png" id="2_qaa2h"]
[ext_resource type="Script" path="res://Scripts/Microgames/Fridge/GoodItem.gd" id="4_psq78"]
[ext_resource type="Texture2D" uid="uid://cdl6ehb3ya5pr" path="res://Assets/Microgames/goodThings.png" id="5_3avgb"]
[ext_resource type="Texture2D" uid="uid://cbf6qgexbf546" path="res://Assets/Microgames/badItemsSpritesheet.png" id="5_aketj"]
[ext_resource type="Script" path="res://Scripts/Microgames/Fridge/BadThing.gd" id="6_x677j"]
[ext_resource type="Script" path="res://Scripts/Microgames/Fridge/RobotHand.gd" id="7_s0et6"]
[ext_resource type="Texture2D" uid="uid://sq15jrovc1ea" path="res://Assets/Controls/grab.png" id="9_trjct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myj5y"]
size = Vector2(280.351, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5g3r"]
size = Vector2(270.767, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yelg5"]
size = Vector2(20, 430.511)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_46cup"]
size = Vector2(20, 432.013)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avxrk"]
size = Vector2(74, 69)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ry0uh"]
radius = 30.0
height = 72.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iwfsx"]
radius = 27.6228
height = 65.4952

[sub_resource type="Animation" id="Animation_mvciy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_k7d2o"]
resource_name = "grab_item"
length = 0.33
step = 0.11
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11, 0.22),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.11, 0.22),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwhho"]
_data = {
"RESET": SubResource("Animation_mvciy"),
"grab_item": SubResource("Animation_k7d2o")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6fndq"]
radius = 26.3578
height = 55.9105

[node name="FridgeMicrogame" type="Node2D"]
script = ExtResource("1_j84xc")

[node name="Fridge" type="Sprite2D" parent="."]
position = Vector2(702, 369)
scale = Vector2(1.6, 1.6)
texture = ExtResource("1_u20vr")

[node name="BoundingBox" type="StaticBody2D" parent="Fridge"]

[node name="BottomBound" type="CollisionShape2D" parent="Fridge/BoundingBox"]
position = Vector2(-0.399353, 262.78)
shape = SubResource("RectangleShape2D_myj5y")

[node name="TopBound" type="CollisionShape2D" parent="Fridge/BoundingBox"]
position = Vector2(1.19812, -189.297)
shape = SubResource("RectangleShape2D_x5g3r")

[node name="LeftBound" type="CollisionShape2D" parent="Fridge/BoundingBox"]
position = Vector2(-147.764, 34.7444)
shape = SubResource("RectangleShape2D_yelg5")

[node name="RightBound" type="CollisionShape2D" parent="Fridge/BoundingBox"]
position = Vector2(146.965, 33.8978)
shape = SubResource("RectangleShape2D_46cup")

[node name="ValidItemPositions" type="Node2D" parent="Fridge"]
position = Vector2(-438.75, -230.625)

[node name="Left1" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(407.5, 188.75)

[node name="Right1" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(490, 188.125)

[node name="Left2" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(408.75, 293.75)

[node name="Right2" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(492.5, 292.5)

[node name="Left3" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(416.25, 385)

[node name="Right3" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(494.375, 385)

[node name="Left4" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(423.125, 466.25)

[node name="Right4" type="Marker2D" parent="Fridge/ValidItemPositions"]
position = Vector2(508.125, 466.25)

[node name="IngredientsList" type="Node2D" parent="."]

[node name="Milk" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1438, 75)
texture = ExtResource("5_3avgb")
region_enabled = true
region_rect = Rect2(418, 7, 67, 121)
script = ExtResource("4_psq78")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/Milk"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/Milk/Hurtbox"]
position = Vector2(5, 10.5)
shape = SubResource("RectangleShape2D_avxrk")

[node name="Eggs" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1435, 200)
texture = ExtResource("5_3avgb")
region_enabled = true
region_rect = Rect2(259, 51, 122, 77)
script = ExtResource("4_psq78")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/Eggs"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/Eggs/Hurtbox"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_avxrk")

[node name="Flour" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1562, 72)
texture = ExtResource("5_3avgb")
region_enabled = true
region_rect = Rect2(536, 15, 84, 113)
script = ExtResource("4_psq78")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/Flour"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/Flour/Hurtbox"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_avxrk")

[node name="Sugar" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1686, 73)
texture = ExtResource("5_3avgb")
region_enabled = true
region_rect = Rect2(152, 15, 85, 113)
script = ExtResource("4_psq78")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/Sugar"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/Sugar/Hurtbox"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_avxrk")

[node name="Butter" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1564, 202)
texture = ExtResource("5_3avgb")
region_enabled = true
region_rect = Rect2(21, 69, 93, 58)
script = ExtResource("4_psq78")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/Butter"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/Butter/Hurtbox"]
position = Vector2(-4, -3)
shape = SubResource("RectangleShape2D_avxrk")

[node name="BlackBlock" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1438, 334)
texture = ExtResource("5_aketj")
region_enabled = true
region_rect = Rect2(272, 21, 99, 107)
script = ExtResource("6_x677j")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/BlackBlock"]
scale = Vector2(0.84, 0.84)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/BlackBlock/Hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_ry0uh")

[node name="OpenedCan" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1561, 330)
texture = ExtResource("5_aketj")
region_enabled = true
region_rect = Rect2(547, 10, 62, 117)
script = ExtResource("6_x677j")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/OpenedCan"]
position = Vector2(1, 7)
scale = Vector2(0.84, 1)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/OpenedCan/Hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_ry0uh")

[node name="Bottle" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1660, 328)
texture = ExtResource("5_aketj")
region_enabled = true
region_rect = Rect2(42, 9, 46, 118)
script = ExtResource("6_x677j")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/Bottle"]
position = Vector2(-1, 6)
scale = Vector2(0.8, 1)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/Bottle/Hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_ry0uh")

[node name="Burger" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1436, 461)
texture = ExtResource("5_aketj")
region_enabled = true
region_rect = Rect2(153, 55, 75, 72)
script = ExtResource("6_x677j")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/Burger"]
scale = Vector2(0.84, 0.88)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/Burger/Hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_ry0uh")

[node name="FishHead" type="Sprite2D" parent="IngredientsList"]
position = Vector2(1547, 461)
texture = ExtResource("5_aketj")
region_enabled = true
region_rect = Rect2(408, 69, 80, 58)
script = ExtResource("6_x677j")
metadata/_edit_group_ = true

[node name="Hurtbox" type="Area2D" parent="IngredientsList/FishHead"]
scale = Vector2(1, 0.6)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredientsList/FishHead/Hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_ry0uh")

[node name="RobotHand" type="CharacterBody2D" parent="."]
position = Vector2(591, 676)
scale = Vector2(1.252, 1.252)
collision_mask = 5
script = ExtResource("7_s0et6")

[node name="HandSprite" type="Sprite2D" parent="RobotHand"]
position = Vector2(10.3834, -40.7348)
scale = Vector2(0.45, 0.45)
texture = ExtResource("2_qaa2h")
hframes = 2
region_rect = Rect2(125, 76, 284, 436)

[node name="CollisionBox" type="CollisionShape2D" parent="RobotHand"]
position = Vector2(37.54, -92.6517)
scale = Vector2(-1.27227, 1.3015)
shape = SubResource("CapsuleShape2D_iwfsx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="RobotHand"]
libraries = {
"": SubResource("AnimationLibrary_lwhho")
}

[node name="HitBox" type="Area2D" parent="RobotHand"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RobotHand/HitBox"]
position = Vector2(40.7348, -87.0607)
shape = SubResource("CapsuleShape2D_6fndq")
disabled = true
debug_color = Color(0.870588, 0.333333, 0.317647, 0.419608)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1366.0
offset_bottom = 771.0

[node name="Controls" type="Sprite2D" parent="UI"]
position = Vector2(1168, 312)
scale = Vector2(0.682857, 0.682857)
texture = ExtResource("9_trjct")

[node name="NecessaryLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 1080.0
offset_top = 416.0
offset_right = 1296.0
offset_bottom = 494.0
text = "Ingredients:        /"

[node name="ProgressLabel" type="Label" parent="UI/NecessaryLabel"]
layout_mode = 0
offset_left = 108.0
offset_right = 284.0
offset_bottom = 78.0
text = "0"

[node name="TotalLabel" type="Label" parent="UI/NecessaryLabel"]
layout_mode = 0
offset_left = 140.0
offset_right = 180.0
offset_bottom = 26.0
text = "3"

[node name="EndUI" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndingFade" type="ColorRect" parent="UI/EndUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CompletedLabel" type="Label" parent="UI/EndUI"]
layout_mode = 0
offset_left = 654.0
offset_top = 224.0
offset_right = 743.0
offset_bottom = 250.0
text = "Completed!"

[connection signal="caught_is_good" from="IngredientsList/Milk" to="." method="increase_good"]
[connection signal="area_entered" from="IngredientsList/Milk/Hurtbox" to="IngredientsList/Milk" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_good" from="IngredientsList/Eggs" to="." method="increase_good"]
[connection signal="area_entered" from="IngredientsList/Eggs/Hurtbox" to="IngredientsList/Eggs" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_good" from="IngredientsList/Flour" to="." method="increase_good"]
[connection signal="area_entered" from="IngredientsList/Flour/Hurtbox" to="IngredientsList/Flour" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_good" from="IngredientsList/Sugar" to="." method="increase_good"]
[connection signal="area_entered" from="IngredientsList/Sugar/Hurtbox" to="IngredientsList/Sugar" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_good" from="IngredientsList/Butter" to="." method="increase_good"]
[connection signal="area_entered" from="IngredientsList/Butter/Hurtbox" to="IngredientsList/Butter" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_bad" from="IngredientsList/BlackBlock" to="." method="set_bad"]
[connection signal="area_entered" from="IngredientsList/BlackBlock/Hurtbox" to="IngredientsList/BlackBlock" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_bad" from="IngredientsList/OpenedCan" to="." method="set_bad"]
[connection signal="area_entered" from="IngredientsList/OpenedCan/Hurtbox" to="IngredientsList/OpenedCan" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_bad" from="IngredientsList/Bottle" to="." method="set_bad"]
[connection signal="area_entered" from="IngredientsList/Bottle/Hurtbox" to="IngredientsList/Bottle" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_bad" from="IngredientsList/Burger" to="." method="set_bad"]
[connection signal="area_entered" from="IngredientsList/Burger/Hurtbox" to="IngredientsList/Burger" method="_on_hurtbox_area_entered"]
[connection signal="caught_is_bad" from="IngredientsList/FishHead" to="." method="set_bad"]
[connection signal="area_entered" from="IngredientsList/FishHead/Hurtbox" to="IngredientsList/FishHead" method="_on_hurtbox_area_entered"]
